Fix some bugs - cursor layout on mobile - first focus not showing keyboard - definitions non triggering - drag cell gives error

--- a/src/app/schema/schema.component.sass
+++ b/src/app/schema/schema.component.sass
@@ -22,7 +22,8 @@ $word-color: map-get($primary, 50)
 
 .schema
   //border: 0px solid gray
-  border-spacing: collapse
+  border-spacing: 0px
+  border-collapse: separate
   display: table
   border-left: 0px solid transparent
   border-top: 0px solid transparent
@@ -38,6 +39,7 @@ $word-color: map-get($primary, 50)
   margin: 0px
   padding: 0px
   display: table-cell
+  border: 0px solid gray
   box-sizing: border-box
   border-left: $cell-border
   border-top: $cell-border
@@ -55,15 +57,13 @@ $word-color: map-get($primary, 50)
 
 .cell
   margin: 0px
-  box-sizing: border-box
   background-color: transparent
+  box-sizing: border-box
+  border: 0px solid gray
   display: flex
   justify-content: center
   align-items: center
   font-weight: bold
-  border-color: transparent
-  border-style: solid
-  border-width: 0px
   position: relative
   z-index: 2
   height: 100%
@@ -73,11 +73,12 @@ $word-color: map-get($primary, 50)
   border-color: map-get($primary, 400)
 
 .block
-  margin: 0.1em
-  background-color: black
   position: absolute
+  box-sizing: border-box
+  border: 0.1em solid white
   border-radius: $cell-radius
   z-index: 1
+  background-color: black
 
 .cursor
   opacity: 0.7
